# aleph

./: pyproject.toml
aleph/: config.py  data_extractor_prompt.py  decision_making_prompt.py  file_data_collector.py  google.py  llm.py  main.py  query_generator_prompt.py  web_collector.py
