[tool.poetry]
name = "aleph"
version = "0.1.0"
description = ""
authors = ["margostino <maj.dagostino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.57.0"
pydantic = "^2.10.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
asyncio = "^3.4.3"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
